recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: '=' expected but identifier found.
def void run {
         ^FourSquare:20: error: illegal start of simple expression
}
^